# sprengui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GUI_GUIDELINES.md  INPUT.md  README.md  WINDOW.md
src/: action.rs  lib.rs  node.rs  page.rs  script.rs  tests.rs  text.rs  widget.rs
src/page/: text.rs  widget.rs  window.rs
src/themes/: adwaita.muon  dive.muon
