# Sprengui
# Copyright © 2020 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - MIT License (https://mit-license.org/)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "sprengui"
version = "0.1.0"
authors = [
    "Jeron Aldaron Lau <jeronlau@plopgrizzly.com>",
]
edition = "2018"
license = "Apache-2.0 OR MIT OR BSL-1.0"
documentation = "https://docs.rs/sprengui"
homepage = "https://github.com/libcala/sprengui/blob/main/CHANGELOG.md"
repository = "https://github.com/libcala/sprengui"
readme = "README.md"
description = "Native-ish GUI Toolkit"
keywords = []
categories = []

[dependencies]
pix = "0.13"
footile = "0.6"
human = "0.2"
whoami = "1.0"
winit = "0.26.1"
#wgpu_glyph = "0.16.0"
#
#[dependencies.wgpu]
#version = "0.11.1"
