# Human
# Copyright © 2020-2021 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - MIT License (https://mit-license.org/)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "human"
version = "0.2.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT OR BSL-1.0"
documentation = "https://docs.rs/human"
homepage = "https://github.com/libcala/human/blob/main/CHANGELOG.md"
repository = "https://github.com/libcala/human"
readme = "README.md"
description = "Human interface devices"
keywords = []
categories = []
include = ["Cargo.toml", "src/*"]

[dependencies.stick]
version = "0.11"

# For Web Assembly
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "Node",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlCollection",
    "AddEventListenerOptions",
]
[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2"

[dependencies]
pasts = "0.11.0"

[build-dependencies]

[dev-dependencies]
devout = "0.2"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
